--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Serverless: Hype or the Future?</title>
+		<title>Cloud for Web Devs</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 		<link rel="stylesheet" href="dist/reset.css">
