link for aws support added

--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@ server {
 							com.amazonaws.REGION.ssm
 						</code></pre>
 						<p style="display: flex"><small><a target="_blank" href="https://stackoverflow.com/questions/61265108/aws-ecs-fargate-resourceinitializationerror-unable-to-pull-secrets-or-registry">stack overflow</a></small></p>
-						<p style="display: flex"><small><a target="_blank" href="https://aws.amazon.com/blogs/containers/aws-fargate-launches-platform-version-1-4/">aws blog</a></small></p>
+						<p style="display: flex"><small><a target="_blank" href="https://aws.amazon.com/blogs/containers/aws-fargate-launches-platform-version-1-4/">aws blog, </a>
+							<a target="_blank" href="https://aws.amazon.com/premiumsupport/knowledge-center/ecs-fargate-tasks-pending-state/">aws support</a></small></p>
 						<p style="display: flex"><small><a target="_blank" href="https://github.com/cloud-4-web-devs/my-thai-star-backend/tree/07-endpoints-added">branch-07</a></small></p>
 					</section>
 				</section>
