--- a/index.html
+++ b/index.html
@@ -354,7 +354,15 @@ server {
 					<section>
 						<h3 class="no-text-transform secondary-color">Adding Database</h3>
 						<p style="display: flex"><small>AWS Fargate is a serverless, pay-as-you-go compute engine that lets you focus on building applications without managing servers. AWS Fargate is compatible with both Amazon Elastic Container Service (ECS) and Amazon Elastic Kubernetes Service (EKS).</small></p>
-						<p style="display: flex"><small><a target="_blank" href="https://github.com/cloud-4-web-devs/my-thai-star-backend/tree/06-fargate-service-added">branch-06</a></small></p>
+						<p style="display: flex"><small>After successful build of infrastucure we need to adjust database endpoint in  application.yaml</small></p>
+						<pre style="margin: 0"><code class="java" data-trim="">url: jdbc:postgresql://[set-db-endpoint]:5432/postgres</code></pre>
+						<p style="display: flex"><small><a target="_blank" href="https://github.com/cloud-4-web-devs/my-thai-star-backend/tree/08-db-added">branch-08</a></small></p>
+					</section>
+					<section>
+						<h3 class="no-text-transform secondary-color">Testing application</h3>
+						<p style="display: flex"><small>We can check our backend by accesing it</small></p>
+						<pre style="margin: 0"><code class="java" data-trim="">http://[load-balancer DNS name]  -> status</code></pre>
+						<pre style="margin: 0"><code class="java" data-trim="">http://[load-balancer DNS name]/booking/tables  -> tables_reservations</code></pre>
 					</section>
 				</section>
 				<section>
@@ -426,8 +434,9 @@ server {
 					</section>
 					<section>
 						<h3 class="no-text-transform secondary-color">Testing our application</h3>
-						<p style="display: flex"><small>To test backend and frontend we can use following links.</small></p>
-						<p style="display: flex"><small><a target="_blank" href="https://github.com/cloud-4-web-devs/my-thai-star-backend/tree/06-fargate-service-added">backend</a></small></p>
+						<p style="display: flex"><small>To test backend and frontend we can use following link...</small></p>
+						<pre style="margin: 0"><code class="java" data-trim="">http://[frontend load-balancer DNS name]  -> tables</code></pre>
+						<p style="display: flex"><small>and make a booking :)</small></p>
 					</section>
 
 				</section>
